add: implemented redis caching. user's accounts request is being cached